# PaddleYOLO-RKNN

./: .gitattributes  .gitignore  NOTICE  README.md  image_shape.py  pyproject.toml  requirements-dev.txt  requirements-paddle.txt  requirements-rknn.txt  train.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
bench/: bench_rknn_perf.c  bench_rknn_perf.cpp  predist_tail_bench.cpp
bench/postprocess/: five_output_runtime.cpp  five_output_runtime.hpp  full_io_runtime.cpp  full_io_runtime.hpp  nmsfree_topk_selector.cpp  nmsfree_topk_selector.hpp  roi_mask_decoder.cpp  roi_mask_decoder.hpp  seg_class_selector.cpp  seg_class_selector.hpp
ddyolo26/: __init__.py  paddle_utils.py  version.py
ddyolo26/cfg/: __init__.py  default.yaml
ddyolo26/data/: __init__.py  augment.py  base.py  build.py  dataset.py  loaders.py  split.py  utils.py
ddyolo26/engine/: __init__.py  exporter.py  (+5 more)
docs/: bench-and-eval.md  coco-baselines.md  deployment-rknn-det.md  deployment-rknn-seg.md  export-pipeline.md  repository-and-versioning.md  training.md
export/: _make_predfl_onnx.py  _make_predist_onnx.py  det_onnx_routes.py  export_det_rknn_i8.py  export_fp32_onnx.py  export_one2many_onnx.py  export_predist_fp32_onnx.py  export_rknn.py  export_seg_onnx_i8.py  export_seg_rknn_i8.py  input_shape.py  model_manifest.py  seg_onnx_routes.py
quant/: eval_quant.py  qat_finetune_paddle.py  quantize.py
scripts/: analyze_training_alignment.py  bench_onnx_cpu.py  board_bench_all.py  build_coco_baseline_table.py  compare_onnx_outputs.py  eval_coco_baselines.py  export_all_models.py  export_coco_baselines.py  prepare_coco_baselines.py
tools/: distill.py  fix_paddle_onnx.py  video_detect.py
(+88 files in other folders)
